Steps 1- 5 implemented
Add schema, model, controllers, routes, and swagger documentation.
